--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
     // ✅ 签名配置：从 GitHub Secrets 读取 keystore 信息
     signingConfigs {
         release {
-            storeFile file("keystore.jks")
+            storeFile rootProject.file("keystore.jks")
             storePassword System.getenv("KEYSTORE_PASSWORD")
             keyAlias System.getenv("KEY_ALIAS")
             keyPassword System.getenv("KEY_PASSWORD")
